--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
+numpy
+pandas
+matplotlib
+seaborn
 scikit-learn>=1.0.0
-xgboost>=1.5.0
-scipy>=1.7.0
-tqdm>=4.62.0
+scipy
+optuna
+subprocess
+logging
+sys
